Make changes for like/likes

--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
         <!--Import materialize.css-->
         <!-- Compiled and minified CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="static/css/style1.css">
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -95,10 +96,14 @@
                     </div>
                     <div class="interaction">
                         <div id="likes">
-                            <a href="javascript:void(0);" onclick="likeClick();"><i  class="material-icons">thumb_up</i></a>
-                            <a href="#" id="thumb-up-like"></a>
-                            <a href="javascript:void(0);" onclick="unlikeClick();"><i  class="material-icons">thumb_down</i></a>
-                            <a href="#" id="thumb-down-dislike"></a> 
+                            <a href="javascript:void(0);" target="_blank">
+                                <i class="fa fa-thumbs-up fa-lg" id="icons"></i> 
+                            </a>
+                            <a href="#">5</a>
+                            <a href="javascript:void(0);" target="_blank">
+                                <i class="fa fa-thumbs-down fa-lg" id="icons"></i>
+                            </a>
+                            <a href="#">15</a> 
                         </div>
                         <div id="responses">
                             <a href="#">10 comments</a>
@@ -131,10 +136,14 @@
                     </div>
                     <div class="interaction">
                             <div id="likes">
-                                <a href="javascript:void(0);" onclick="likeClick();"><i  class="material-icons">thumb_up</i></a>
-                                <a href="#" id="thumb-up-like"></a>
-                                <a href="javascript:void(0);" onclick="unlikeClick();"><i  class="material-icons">thumb_down</i></a>
-                                <a href="#" id="thumb-down-dislike"></a> 
+                                <a href="javascript:void(0);" target="_blank">
+                                        <i class="fa fa-thumbs-up fa-lg" id="icons"></i> 
+                                </a>
+                                <a href="#">10</a>
+                                <a href="javascript:void(0);" target="_blank">
+                                    <i class="fa fa-thumbs-down fa-lg" id="icons"></i>
+                                </a>
+                                <a href="#">55</a> 
                             </div>
                             <div id="responses">
                                 <a href="#">5 comments</a>
@@ -166,10 +175,14 @@
                     </div>
                     <div class="interaction">
                         <div id="likes">
-                            <a href="javascript:void(0);" onclick="likeClick();"><i  class="material-icons">thumb_up</i></a>
-                            <a href="#" id="thumb-up-like"></a>
-                            <a href="javascript:void(0);" onclick="unlikeClick();"><i  class="material-icons">thumb_down</i></a>
-                            <a href="#" id="thumb-down-dislike"></a> 
+                            <a href="javascript:void(0);" target="_blank">
+                                    <i class="fa fa-thumbs-up fa-lg" id="icons"></i> 
+                            </a>
+                            <a href="#">155</a>
+                            <a href="javascript:void(0);" target="_blank">
+                                <i class="fa fa-thumbs-down fa-lg" id="icons"></i>
+                            </a>
+                            <a href="#">16</a>  
                         </div>
                         <div id="responses">
                             <a href="#">0 comments</a>
@@ -182,7 +195,7 @@
         </div>
             
         <!-- Compiled and minified JavaScript -->
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
         <script src="static/js/script.js"></script>
     </body>
