--- a/notifications.html
+++ b/notifications.html
@@ -20,7 +20,7 @@
 </head>
 
 <body class="">
-<nav class="teal row">
+<nav class="navigation-bar row">
     <div class="nav-wrapper">
       <a href="#" class="logo">Authors Haven</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -31,30 +31,30 @@
     <div class="container">
         <div class="row">
             <div class="col s12">
-                <div class="card teal darken-1">
+                <div class="card darken-1">
                 <div class="card-content white-text">
-                    <p>Recent notifications</p>
+                    <p class="recent_notifications">Recent notifications</p>
                 </div>
                 <div>
                 <ul class="collection">
     <li class="collection-item avatar">
    
-      <p><a href="sample.html">John Posted a new article</a><br>
+      <p><a href="sample.html">John Posted a new article about investment</a><br>
       </p>
       <a href="sample.html" class="secondary-content"><i class="material-icons">Just Now</i></a>
     </li>
     <li class="collection-item avatar">
-      <p><a href="sample.html">Sam added a new article</a><br>
+      <p><a href="sample.html">Sam added a new article about cooking</a><br>
       </p>
       <a href="sample.html" class="secondary-content"><i class="material-icons">32 mins ago</i></a>
     </li>
     <li class="collection-item avatar">
-      <p><a href="sample.html">Jane liked your comment</a><br>
+      <p><a href="sample.html">Jane commented on this article about workout</a><br>
       </p>
       <a href="sample.html" class="secondary-content"><i class="material-icons">2 hours ago</i></a>
     </li>
     <li class="collection-item avatar">
-      <p><a href="sample.html">Tom commented on your article</a><br>
+      <p><a href="sample.html">james commented on this article about time management.</a><br>
       </p>
       <a href="sample.html" class="secondary-content"><i class="material-icons">Yesterday</i></a>
     </li>
