--- a/users.html
+++ b/users.html
@@ -73,6 +73,15 @@
                 <h2> Unai Emirates</h2>
             </li>
         </ul>
+        <ul class="pagination ">
+            <li class="disabled "><a href="#! "><i class="material-icons ">chevron_left</i></a></li>
+            <li class="active "><a href="#! ">1</a></li>
+            <li class="waves-effect "><a href="#! ">2</a></li>
+            <li class="waves-effect "><a href="#! ">3</a></li>
+            <li class="waves-effect "><a href="#! ">4</a></li>
+            <li class="waves-effect "><a href="#! ">5</a></li>
+            <li class="waves-effect "><a href="#! "><i class="material-icons ">chevron_right</i></a></li>
+        </ul>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js " type="text/javascript ">
     </script>
