--- a/notifications.html
+++ b/notifications.html
@@ -28,7 +28,7 @@
       </ul>
     </div>
   </nav>
-    <div class="container">
+    <div class="container id='dropdown1' class='dropdown-content">
         <div class="row">
             <div class="col s12">
                 <div class="card darken-1">
