Add reading stats page

--- a/profile.html
+++ b/profile.html
@@ -24,6 +24,7 @@
                     <ul class="right">
                         <li><a href="#"><i  class="material-icons">search</i></a></li>
                         <li><a href="#"><i class="material-icons">notifications_none</i></a></li>
+                        <li><a href="stats.html"><i class="large material-icons">insert_chart</i></a></li>
                         <li><a href="#" class="nav-image"><img src="static/img/avatar.png" alt="avatar"></a></li>
                     </ul>
                 </div>
