Add search results

--- a/sample.html
+++ b/sample.html
@@ -63,7 +63,7 @@
                             <p style="display: inline; margin-right: 30px;"> <label> <input type="checkbox" /> <span>Author</span> </label> </p>
                             <p style="display: inline"> <label> <input type="checkbox" /> <span>Description</span> </label> </p>
                         </div>
-                        <h2>Sample Article Title</h2>
+                        a<h2>Sample Article Title</h2>
                         <p class="author_name">by Kelvin Kitika</p>
                         <div class="chip">
                             Pizza
