--- a/sample.html
+++ b/sample.html
@@ -176,15 +176,15 @@
                                 <div id="historyTxt" style="margin-left: 30px; display: none; ">
                                     <div id="content_1">
                                         <p class="teal-text" style="font-style: italic; margin-bottom: 0">(18th February 2018)</p>
-                                        <p style="margin-top: 0; padding-top: 0; margin-left: 20px;">Hi therrrrre</p>
+                                        <p style="margin-top: 0; padding-top: 0; margin-left: 20px;">Hi Kitika thisarticle is font-awesome</p>
                                     </div>
                                     <div id="content_1">
                                         <p class="teal-text" style="font-style: italic; margin-bottom: 0">(18th February 2018)</p>
-                                        <p style="margin-top: 0; padding-top: 0; margin-left: 20px;">Hi therer Edwrd</p>
+                                        <p style="margin-top: 0; padding-top: 0; margin-left: 20px;">Hi Kitika this article is font-awesome</p>
                                     </div>
                                 </div>
                                 <div id="content_1">
-                                    <p>Hi there Edward</p>
+                                    <p>Hi Kitika this article is awesome</p>
                                 </div>
                                 <div id="subComments_1" style="margin-left: 100px">
                                 </div>
