Add search results

--- a/sample.html
+++ b/sample.html
@@ -63,7 +63,7 @@
                             <p style="display: inline; margin-right: 30px;"> <label> <input type="checkbox" /> <span>Author</span> </label> </p>
                             <p style="display: inline"> <label> <input type="checkbox" /> <span>Description</span> </label> </p>
                         </div>
-                        a<h2>Sample Article Title</h2>
+                        <h2>Sample Article Title</h2>
                         <p class="author_name">by Kelvin Kitika</p>
                         <div class="chip">
                             Pizza
@@ -366,7 +366,7 @@
         <script charset="utf-8">
             $('#searchTextInput').keyup(function (evt) {
                 if (evt.keyCode) == 13) {
-
+                    window.location.href= 'https://james-chege.github.io/authors-heaven/search_results.html#';
                 }
             });
         </script>
