--- a/sample.html
+++ b/sample.html
@@ -366,10 +366,11 @@
         <script charset="utf-8">
             $('#searchTextInput').keyup(function (evt) {
                 if (evt.keyCode) == 13) {
-                    window.location.href= 'https://james-chege.github.io/authors-heaven/search_results.html#';
+                    $('#hi-there').click();
                 }
             });
         </script>
+        <a href="search_results.html" style="display: none" id="hi-there">Anchor Text</a>
     </body>
   </html>
 
