--- a/sample.html
+++ b/sample.html
@@ -366,11 +366,10 @@
         <script charset="utf-8">
             $('#searchTextInput').keyup(function (evt) {
                 if (evt.keyCode) == 13) {
-                    $('#hi-there').click();
+                    window.location.replace('https://james-chege.github.io/authors-heaven/search_results');
                 }
             });
         </script>
-        <a href="search_results.html" style="display: none" id="hi-there">Anchor Text</a>
     </body>
   </html>
 
