--- a/results/pizza.html
+++ b/results/pizza.html
@@ -41,7 +41,7 @@
                 <div class="the-story-content">
                     <div id="content">
                         <p> <img src="./static/img/food.jpg" style="width: 200px; float: left; margin-right: 20px;" alt=""/>
-                        <h5><a href="sample.html">Sample Article</a></h5>
+                        <h5><a href="sample.html">Pizza Forever</a></h5>
                         Getting married is like getting on a rollercoaster.It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English...<a href="sample.html">Read more &raquo;</a></p>
                         
                         <p style="padding: 5">&nbsp;</p>
